kubernetes/cluster-0/apps/tekton/tekton/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tekton-dashboard
  namespace: tekton-dashboard
  annotations:
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    external-dns.alpha.kubernetes.io/target: "homelab-tunnel.sillock.co.uk"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-response-headers: X-Auth-Request-User,X-Auth-Request-Email
    nginx.ingress.kubernetes.io/auth-signin: https://oauth.sillock.co.uk/oauth2/start
    nginx.ingress.kubernetes.io/auth-url: http://oauth2-proxy.oauth2-proxy.svc.cluster.local/oauth2/auth
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  rules:
    - host: &host tekton.sillock.co.uk
      http:
        paths:
          - pathType: ImplementationSpecific
            backend:
              service:
                name: tekton-dashboard
                port:
                  name: http
  tls:
    - hosts:
        - *host
      secretName: tekton-tls-certificate
